testing/errors/stringlength2.a
	*=$1000
		lda #"aa"	; -> "String length is not 1."
